--- a/src/components/MainNav/MainNav.module.scss
+++ b/src/components/MainNav/MainNav.module.scss
@@ -12,9 +12,13 @@
   color: #832a85;
   font-weight: 900;
   flex: 1;
+  @media screen and (max-width: 900px) {
+    font-size: 3vh;
+  }
 }
 
 .navMenu {
+  // padding-right: 2vh;
   display: flex;
   flex-direction: column;
   position: fixed;
@@ -35,6 +39,6 @@
 
 .closeButton {
   position: absolute;
-  top: 0;
-  right: 0;
+  top: 2vmin;
+  right: 2vmin;
 }
