--- a/src/components/GenericButton/GenericButton.module.scss
+++ b/src/components/GenericButton/GenericButton.module.scss
@@ -8,8 +8,8 @@
   text-decoration: none;
   border-top-left-radius: 2vh;
   border-bottom-right-radius: 2vh;
-  font-weight: bolder;
-  font-size: 4vmin;
+  // font-weight: bold;
+  font-size: 3vmin;
   margin: 2vh;
   &:hover {
     box-shadow: 5px 5px 0 #832a85;
@@ -18,7 +18,7 @@
   }
   @media screen and (max-width: 900px) {
     margin: 2vh auto 2vh 0;
-    font-size: 1.5vmax;
+    font-size: 3vmax;
     padding: 1vh 1.5vh;
     &:hover {
       box-shadow: 2.5px 2.5px 0 #fff;
