--- a/src/components/CaseStudyCard/CaseStudyCard.module.css
+++ b/src/components/CaseStudyCard/CaseStudyCard.module.css
@@ -4,6 +4,11 @@
   overflow: hidden;
   box-shadow: 0px 0px 5px rgb(189, 189, 189);
 }
+@media screen and (max-width: 900px) {
+  .caseStudyCardContainer {
+    width: 100%;
+  }
+}
 
 .cardImage {
   width: 100%;
