--- a/src/components/CaseStudyCard/CaseStudyCard.module.scss
+++ b/src/components/CaseStudyCard/CaseStudyCard.module.scss
@@ -4,6 +4,11 @@
   //   background: #000;
   overflow: hidden;
   box-shadow: 0px 0px 5px rgb(189, 189, 189);
+  @media screen and (max-width: 900px) {
+    // grid-template-columns: auto;
+    width: 100%;
+    
+  }
 }
 .cardImage {
   width: 100%;
