--- a/src/components/CaseStudyCard/CaseStudyCard.module.scss
+++ b/src/components/CaseStudyCard/CaseStudyCard.module.scss
@@ -7,7 +7,6 @@
   @media screen and (max-width: 900px) {
     // grid-template-columns: auto;
     width: 100%;
-    
   }
 }
 .cardImage {
@@ -15,35 +14,70 @@
 }
 
 .cardDataSection {
-  padding: 2vmin;
+  padding: 3vmin;
 }
 .cardHeading {
-  font-size: 3vmin;
+  font-weight: 900;
+  color: rgb(44, 44, 44);
+  font-size: 5vmin;
   font-weight: 200;
   padding-top: 1vmin;
+  @media screen and (max-width: 900px) {
+    // grid-template-columns: auto;
+    font-size: 8vmin;
+  }
 }
 .cardPara {
+  color: rgb(49, 49, 49);
   padding: 2vmin 0;
-  font-size: 2vmin;
+  font-size: 3vmin;
+  @media screen and (max-width: 900px) {
+    // grid-template-columns: auto;
+    font-size: 4.5vmin;
+    padding: 4.5vmin 0;
+  }
 }
 .cardLink {
   text-decoration: none;
   color: #0353b1;
-  font-size: 2vmin;
+  font-size: 3vmin;
   display: flex;
   align-items: center;
   & svg {
+    height: 3vmin;
+    width: 3.5vmin;
+
     stroke: #0353b1;
+  }
+  @media screen and (max-width: 900px) {
+    // grid-template-columns: auto;
+    & svg {
+      height: 5vmin;
+      width: 5.5vmin;
+      stroke: #0353b1;
+    }
+    font-size: 4.5vmin;
   }
 }
 
 .cardCommingSoon {
-  font-size: 2vmin;
+  font-size: 3vmin;
 
-  color: lightgrey;
+  color: rgb(125, 125, 125);
   display: flex;
   align-items: center;
   & svg {
-    stroke: lightgrey;
+    height: 3vmin;
+    width: 3.5vmin;
+    stroke: rgb(112, 112, 112);
+  }
+  @media screen and (max-width: 900px) {
+    // grid-template-columns: auto;
+    & svg {
+      height: 5vmin;
+      width: 5.5vmin;
+      stroke: rgb(112, 112, 112);
+    }
+    font-size: 4.5vmin;
   }
 }
