--- a/src/components/CaseStudyGallery/CaseStrdyGallery.module.scss
+++ b/src/components/CaseStudyGallery/CaseStrdyGallery.module.scss
@@ -6,4 +6,9 @@
   display: flex;
   flex-wrap: wrap;
   gap: 2vmin;
+  @media screen and (max-width: 900px) {
+    // grid-template-columns: auto;
+    gap: 5vmin;
+  }
+  margin-bottom: 5vmin;
 }
