--- a/src/components/Footer/Footer.module.scss
+++ b/src/components/Footer/Footer.module.scss
@@ -5,7 +5,13 @@
   justify-content: center;
   align-items: center;
   & > a {
+    font-size: 2vmin;
     padding: 1vh;
     margin: 0.5vh 0;
+    @media screen and (max-width: 900px) {
+      // grid-template-columns: auto;
+      font-size: 4.5vmin;
+      color: black;
+    }
   }
 }
